@@ -46,6 +46,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-576: Bookie client should use netty Decoder/Encoder (ivank via sijie)
 
+      BOOKKEEPER-585: Auditor logs noisily when a ledger has been deleted (ivank via sijie)
+
 Release 4.2.0 - 2013-01-14
 
   Non-backward compatible changes:
